# safe-chrx-proto

./: .gitattributes  .gitignore  .gitmodules  BUILDING.md  CONTRIBUTING.md  Makefile  README.md  build.sh  chrxer.code-workspace  deb_startup.md  diff.patch  entrypoint.sh  os_crypt.patch
.github/workflows/: build.yml
backend/: .gitignore  README.md  client.go  crypt.go  deps.sh  go.mod
backend/server/: .gitignore  crypt.go  go.mod  go.sum  hash.txt  main.go  password.txt  popup.go
docs/: README.md
patch/chromium/: .gclient
patch/chromium/src/: README.md.ptcx
patch/chromium/src/chrx/: BUILD.gn  chrx_headfull_unittest.cc  chrx_unittest.cc
patch/chromium/src/chrx/aes_crypt/: aes_crypt.cc  aes_crypt.h  aes_crypt_unittest.cc
patch/chromium/src/chrx/chrx_server/: chrx_server.cc  chrx_server.h  chrx_server_unittest.cc  ports.cc  ports.h
patch/chromium/src/chrx/os_crypt_hook/: os_crypt.cc  os_crypt.h  os_crypt_hook_unittest.cc
patch/chromium/src/components/os_crypt/sync/: BUILD.gn.ptcx  os_crypt_linux.cc.ptcx  os_crypt_mac.mm.ptcx
roadmap/: README.md
scripts/: .gitignore  README.md  autotest.py  build.py  build.sh  build_os_crypt.py  clean.py  clean.sh  deps.bat  deps.sh  diff.py  get_commit.sh  pack.py  pack.sh  patch.py  patch.sh  pull_ccache.sh  requirements.txt  stats.py  stats.sh  test_target.sh
scripts/utils/: __init__.py  ccache_.py  fetch_.py  fs.py  gclient_.py  git.py  git_.py  initenv.py  mkargs.py  wrap.py
